tests/baselines/reference/symbolProperty39(strict=true).errors.txt
symbolProperty39.ts(2,5): error TS2393: Duplicate function implementation.
symbolProperty39.ts(2,5): error TS2394: This overload signature is not compatible with its implementation signature.
symbolProperty39.ts(3,5): error TS2393: Duplicate function implementation.
symbolProperty39.ts(4,5): error TS2393: Duplicate function implementation.
symbolProperty39.ts(7,5): error TS2393: Duplicate function implementation.


==== symbolProperty39.ts (5 errors) ====
    class C {
        [Symbol.iterator](x: string): string;
        ~~~~~~~~~~~~~~~~~
!!! error TS2393: Duplicate function implementation.
        ~~~~~~~~~~~~~~~~~
!!! error TS2394: This overload signature is not compatible with its implementation signature.
!!! related TS2750 symbolProperty39.ts:4:5: The implementation signature is declared here.
        [Symbol.iterator](x: number): number;
        ~~~~~~~~~~~~~~~~~
!!! error TS2393: Duplicate function implementation.
        [Symbol.iterator](x: any) {
        ~~~~~~~~~~~~~~~~~
!!! error TS2393: Duplicate function implementation.
            return undefined;
        }
        [Symbol.iterator](x: any) {
        ~~~~~~~~~~~~~~~~~
!!! error TS2393: Duplicate function implementation.
            return undefined;
        }
    }